# Bot-Exps

./: .gitignore
Exp-1/: Exp-1.ino
Exp-2/: Exp-2.ino
Exp-3/recv/: recv.ino
Exp-3/send/: send.ino
Exp-4/: Exp-4.ino
Exp-5/: Exp-5.ino
Exp-6/CarAutoControl/: CMakeLists.txt  Controller.cpp  Controller.h  data.txt  testBall.cpp  testRun.cpp
Exp-6/Map gen/: Map_gen.py  data.txt  pyproject.toml
Exp-7/: Exp-7.ino
